# smart-task-tracker

./: .coveragerc  .env.example  .gitignore  CODE_ANALYSIS_REPORT.md  DEPLOYMENT.md  Dockerfile  README.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.deepagents/: AGENTS.md
.github/workflows/: ci.yml  docker.yml  security.yml  tests.yml
.oat/: AGENTS.md
alembic/: env.py
alembic/versions/: 002_add_users_table.py  f3abe76904a5_initial_schema.py
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
app/routers/: projects.py  tags.py  tasks.py
app/services/: analytics.py  priority.py  statistics.py
src/app/: auth.py  config.py  database.py  jwt_auth.py  main.py  models.py  rate_limit.py  schemas.py  store.py
src/app/routers/: analytics.py  auth.py  projects.py  tasks.py
src/app/services/: __init__.py  analytics.py  priority.py
src/app/utils/: logging.py
tests/: conftest.py  test_analytics_router.py  test_api_integration.py  test_api_projects.py  test_api_tasks.py  test_auth.py  test_auth_endpoints.py  test_config.py  test_integration_settings.py  test_jwt_auth.py  test_logging_utils.py  test_models.py  test_projects_router.py  test_rate_limit.py  test_services.py  test_tasks.py  test_tasks_router.py
